@@ -181,6 +181,9 @@ ImageScale 100
 5MinuteGraphResultCount 576
 5MinuteGraphHeight 300
 
+# horizontal/vertical summary graph (0 = hours, 1 = 5 minutes)
+SummaryGraph 0
+
 # traffic estimate bar style
 # (0 = not shown, 1 = continuation of existing bar, 2 = separate bar)
 EstimateStyle 1
