@@ -1,4 +1,4 @@
-.TH VNSTAT.CONF 5 "FEBRUARY 2021" "version 2.7" "User Manuals"
+.TH VNSTAT.CONF 5 "MARCH 2021" "version 2.7" "User Manuals"
 .SH NAME
 vnstat.conf \- vnStat configuration file
 
@@ -473,6 +473,11 @@ Increase the size of used fonts. 1 = enabled, 0 = disabled.
 .B LineSpacingAdjustment
 Adjust line spacing in list format outputs. Positive values increase the
 space between lines while negative values reduce it. Value range: -5..10
+
+.TP
+.B SummaryGraph
+Select which graph style output is shown next to the summary data in the
+horizontal and vertical summary outputs. 0 = hours, 1 = 5 minutes.
 
 .TP
 .B SummaryRate
